--- a/Byers.css
+++ b/Byers.css
@@ -229,4 +229,21 @@ footer {
     bottom: 0;
     width: 100%;
 }
+/* Media Query for Phones */
+@media only screen and (max-width: 600px) {
+    header h1 {
+        font-size: 20px;
+    }
+    
+    nav ul li {
+        margin: 0 5px;
+    }
+}
+
+/* Media Query for Tablets and Computers */
+@media only screen and (min-width: 601px) {
+    header h1 {
+        font-size: 28px;
+    }
+}
 
