--- a/Byers.css
+++ b/Byers.css
@@ -39,7 +39,7 @@ nav ul {
 
 nav ul li {
     display: inline;
-    margin: 0 10px;
+    margin: 0 40px;
 }
 
 nav ul li a {
@@ -48,11 +48,10 @@ nav ul li a {
 }
 
 nav ul li a:hover {
-    text-decoration: underline;
+    color: rgb(69, 69, 69):
 }
 
-.navbar-logo {
-    height: 50px; 
+.navbar-logo { 
     padding: 10px; 
     margin-right: 20px; 
 }
