--- a/Byers.css
+++ b/Byers.css
@@ -19,19 +19,34 @@ body {
 }
 
 nav ul {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+
+/*nav ul {
     text-align: center;
     list-style: none;
     padding: 0;
 }
+*/
 
 nav ul li {
+    margin: 0 15px; /* Space between the menu items */
+}
+
+/*nav ul li {
     display: inline;
     margin: 0 30px;
 }
-
+*/
 nav ul li a {
     text-decoration: none;
     color: black;
+    font-size: 16px;
 }
 
 nav ul li a:hover {
@@ -39,8 +54,7 @@ nav ul li a:hover {
 }
 
 .navbar-logo { 
-    height: auto;
-    padding: 30px; 
+    height: 40px;
     margin-right: 20px; 
 }
 
