--- a/Byers.css
+++ b/Byers.css
@@ -18,6 +18,18 @@ body {
     padding: 0 20px;
 }
 
+.navbar {
+    display: flex;
+    align-items: center; /* Align items vertically in the center */
+    justify-content: space-between;
+    background-color: #333;
+    padding: 10px 20px;
+    position: fixed;
+    width: 100%;
+    top: 0;
+    z-index: 1000; /* Make sure the navbar stays on top */
+}
+
 nav ul {
     display: flex;
     justify-content: center;
