--- a/Byers.css
+++ b/Byers.css
@@ -23,6 +23,7 @@ body {
     align-items: center; /* Align items vertically in the center */
     justify-content: space-between;
     padding: 10px 20px;
+    position: fixed;
     width: 100%;
     top: 0;
     z-index: 1000; /* Make sure the navbar stays on top */
