--- a/Byers.css
+++ b/Byers.css
@@ -3,7 +3,8 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    background-color: whitesmoke;
+    background-image: url(Images/AirplaneBackground.webp);
+    /*background-color: whitesmoke;*/
 }
 
 
@@ -167,7 +168,7 @@ nav ul li a:hover {
 /* CSS for styling tables */
 /* Table container */
 .event-table-container {
-    padding-top: 30px;
+    padding-top: 60px;
     margin: 20px;
 }
 
