--- a/Byers.css
+++ b/Byers.css
@@ -4,7 +4,6 @@ body {
     margin: 0;
     padding: 0;
     background-color: whitesmoke;
-    /*background-color: whitesmoke;*/
 }
 
 
@@ -16,7 +15,7 @@ body {
     text-align: center;
     max-width: 1200px;
     margin: 0 auto;
-    padding: 0 20px;
+    padding: 50px 20px;
 }
 
 .navbar {
@@ -39,22 +38,10 @@ nav ul {
     margin: 0;
 }
 
-/*nav ul {
-    text-align: center;
-    list-style: none;
-    padding: 0;
-}
-*/
-
 nav ul li {
     margin: 0 15px; /* Space between the menu items */
 }
 
-/*nav ul li {
-    display: inline;
-    margin: 0 30px;
-}
-*/
 nav ul li a {
     text-decoration: none;
     color: black;
@@ -73,7 +60,8 @@ nav ul li a:hover {
 /* Home Page */
 .home {
     text-align: center;
-    padding: 50px 0;
+    padding-top: 50px;
+    padding-bottom: 30px;
 }
 
 .home p {
@@ -235,14 +223,14 @@ nav ul li a:hover {
     padding: 20px 20px;
 }
 
-/* Initial fade-in styles */
+/* Initial state: hidden */
 .fade-in-section {
     opacity: 0;
     transform: translateY(20px);
-    transition: opacity 0.6s ease-out, transform 0.6s ease-out;
+    transition: opacity 1s ease-out, transform 1s ease-out;
 }
 
-/* When the section is visible, apply these styles */
+/* Fade-in state */
 .fade-in-section.visible {
     opacity: 1;
     transform: translateY(0);
