--- a/Byers.css
+++ b/Byers.css
@@ -128,6 +128,7 @@ nav ul li a:hover {
     margin-bottom: 30px;
     text-align: center;
     margin: auto;
+    padding-top: 30px;
 }
 
 .about-section h2 {
@@ -221,19 +222,6 @@ nav ul li a:hover {
     max-width: 1200px;
     margin: 0 auto;
     padding: 20px 20px;
-}
-
-/* Initial state: hidden */
-.fade-in-section {
-    opacity: 0;
-    transform: translateY(20px);
-    transition: opacity 1s ease-out, transform 1s ease-out;
-}
-
-/* Fade-in state */
-.fade-in-section.visible {
-    opacity: 1;
-    transform: translateY(0);
 }
 
 /* Footer styles */
