--- a/Byers.css
+++ b/Byers.css
@@ -224,18 +224,21 @@ nav ul li a:hover {
     padding: 20px 20px;
 }
 
+/* Initial state: hidden */
 .fade-in-section {
     opacity: 0;
     transform: translateY(20vh);
     visibility: hidden;
     transition: opacity 0.6s ease-out, transform 1.2s ease-out;
-    will-change: opacity, visibility;
-  }
-  .fade-in-section.is-visible {
+}
+
+/* Fade-in state */
+.fade-in-section.is-visible {
     opacity: 1;
     transform: none;
     visibility: visible;
-  }
+}
+
 
 /* Footer styles */
 footer {
