--- a/Byers.css
+++ b/Byers.css
@@ -256,8 +256,10 @@ footer {
 }
 
 .footer-image {
-    max-width: 100px; /* Adjust the size of the image */
+    max-width: 10px; /* Adjust the size of the image */
     height: auto;
     display: block;
+    justify-content: right;
     margin: 0 auto;
+    padding-right: 20px;
 }
