--- a/Byers.css
+++ b/Byers.css
@@ -252,14 +252,21 @@ footer {
 }
 
 .footer-content {
-    display: inline-block;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
 .footer-image {
-    max-width: 10px; /* Adjust the size of the image */
+    max-width: 100px;
     height: auto;
+}
+
+.footer-link {
     display: block;
-    justify-content: right;
-    margin: 0 auto;
-    padding-right: 20px;
+}
+
+.footer p {
+    margin: 0;
 }
