--- a/Byers.css
+++ b/Byers.css
@@ -257,9 +257,15 @@ footer {
     height: auto;
 }
 
-.footer-link {
+.footer-links {
+    display: flex;
+    gap: 10px;
     position: absolute;
     right: 20px;
+}
+
+.footer-link {
+    display: block;
 }
 
 .footer p {
