--- a/Byers.css
+++ b/Byers.css
@@ -23,7 +23,7 @@ body {
     align-items: center; /* Align items vertically in the center */
     justify-content: space-between;
     padding: 10px 20px;
-    position: fixed;
+    position: absolute;
     width: 90%;
     top: 0;
     z-index: 1000; /* Make sure the navbar stays on top */
