--- a/Byers.css
+++ b/Byers.css
@@ -40,13 +40,23 @@ nav ul {
 }
 
 nav ul li {
-    margin: 0 10px; /* Space between the menu items */
+    margin: 0 15px; /* Space between the menu items */
 }
 
 nav ul li a {
     text-decoration: none;
     color: black;
     font-size: 16px;
+}
+
+@media (max-width: 600px){
+    nav ul li a{
+        font-size: 10px;
+    }
+
+    nav ul li{
+        margin: 0 10px;
+    }
 }
 
 nav ul li a:hover {
