--- a/Byers.css
+++ b/Byers.css
@@ -50,12 +50,16 @@ nav ul li a {
 }
 
 @media (max-width: 300px){
+    .navbar-logo{
+        height: 20px;
+        margin-right: 10px;
+    }
     nav ul li a{
-        font-size: 10px;
+        font-size: 8px;
     }
 
     nav ul li{
-        margin: 0 10px;
+        margin: 0 6px;
     }
 }
 
