--- a/Byers.css
+++ b/Byers.css
@@ -50,10 +50,6 @@ nav ul li a {
 }
 
 @media (max-width: 300px){
-    .navbar-logo{
-        height: 20px;
-        margin-right: 10px;
-    }
     nav ul li a{
         font-size: 8px;
     }
@@ -70,6 +66,13 @@ nav ul li a:hover {
 .navbar-logo { 
     height: 40px;
     margin-right: 20px; 
+}
+
+@media (max-width: 300px){
+    .navbar-logo{
+        height: 20px;
+        margin-right: 10px;
+    }
 }
 
 /* Home Page */
