--- a/Byers.css
+++ b/Byers.css
@@ -60,11 +60,12 @@ nav ul li a:hover {
 @media (max-width: 575.98px) {
     .navbar{
         font-size: 10px;
-        padding: 10px 0px 0px 0px; 
+        padding-left: 0px; 
     }
 
     .navbar-logo{
         height: 20px;
+        margin-right: 0px;
     }
 }
 
