--- a/Byers.css
+++ b/Byers.css
@@ -27,8 +27,8 @@ body {
 }
 
 @media (min-width: 576px) {
-    nav ul li{
-        margin-right: 20px;
+    .navbar{
+        width: 70%;
     }
 }
 
