--- a/Byers.css
+++ b/Byers.css
@@ -250,6 +250,7 @@ footer {
     color: white;
     padding: 20px;
     display: flex;
+    width: 100%;
     justify-content: center;
     align-items: center;
     position: relative;
